[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnsig"
version = "0.1.0"
description = "CVSS vulnerability signature glyphs as SVG"
requires-python = ">=3.10"
dependencies = [
    "cvss==3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
