[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnsig"
version = "0.1.0"
description = "Render CVSS vulnerability vectors as expressive SVG glyphs"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"

dependencies = [
    "cvss==3.6",
]


[project.urls]
Homepage = "https://vulnsig.io"
Repository = "https://github.com/vulnsig/vulnsig-py"

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "ruff==0.15.0",
    "mypy==1.19.1",
    "nox==2025.11.12",
    "build==1.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]




[tool.ruff]
line-length = 90
indent-width = 4

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"


[tool.mypy]
files = "src/**/*.py"
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_return_any = true
warn_unused_configs = true
# disable_error_code = "misc"
